@@ -1,3 +1,9 @@
+2009-08-08  Alan Modra  <amodra@bigpond.net.au>
+
+	PR 10494
+	* elf.c (_bfd_elf_make_section_from_shdr): When setting up section
+	LMAs, use ELF_IS_SECTION_IN_SEGMENT to match sections with headers.
+
 2009-08-07  Tom Tromey  <tromey@redhat.com>
 
 	* elf32-microblaze.c (microblaze_elf_check_relocs): Avoid strict
